{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 28,
  "lineage": "84a65876-6af3-b1d2-9c1e-b0118a0f2dce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06a4473743544603e",
            "domain": "vpc",
            "id": "eipalloc-018ab2f04670b0d9f",
            "instance": "i-063621a76267df54a",
            "network_interface": "eni-0a04a6891a0b8cdfc",
            "private_dns": "ip-172-31-45-117.eu-central-1.compute.internal",
            "private_ip": "172.31.45.117",
            "public_dns": "ec2-3-121-61-113.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.121.61.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.test-instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_WP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:357401252085:security-group/sg-06ffc606653e11a8a",
            "description": "Allow port 8080 for WordPress",
            "egress": [],
            "id": "sg-06ffc606653e11a8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_WP",
            "name_prefix": null,
            "owner_id": "357401252085",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03667868"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_basic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:357401252085:security-group/sg-01f4c7d7e65096add",
            "description": "Allow basic ports",
            "egress": [],
            "id": "sg-01f4c7d7e65096add",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 500
              }
            ],
            "name": "allow_basic",
            "name_prefix": null,
            "owner_id": "357401252085",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03667868"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_grafana",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:357401252085:security-group/sg-061caa6c3983ae69c",
            "description": "Allow basic ports",
            "egress": [],
            "id": "sg-061caa6c3983ae69c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "allow_grafana",
            "name_prefix": null,
            "owner_id": "357401252085",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-03667868"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:357401252085:security-group/sg-0e34620abe78be94c",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e34620abe78be94c",
            "ingress": [],
            "name": "allow-all-outbound",
            "name_prefix": null,
            "owner_id": "357401252085",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03667868"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_range",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:357401252085:security-group/sg-03e3e45b9a6c3c3b7",
            "description": "Allow port range 8000-9999",
            "egress": [],
            "id": "sg-03e3e45b9a6c3c3b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9999
              }
            ],
            "name": "allow_range",
            "name_prefix": null,
            "owner_id": "357401252085",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03667868"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:357401252085:security-group/sg-0cf8da4808de018de",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-0cf8da4808de018de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "357401252085",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03667868"
          }
        }
      ]
    }
  ]
}